language/move-lang/tests/move_check/parser/let_binding_missing_type.exp
error: 

   ┌── tests/move_check/parser/let_binding_missing_type.move:3:17 ───
   │
 3 │         let x : = 0;
   │                 ^ Unrecognized Token: =
   ·
 3 │         let x : = 0;
   │                 - Expected:  "&", "&mut ", "(", "()", r#"0[xX][0-9a-fA-F]+"#, r#"[a-zA-Z_][a-zA-Z0-9_]*"#, r#"[a-zA-Z_][a-zA-Z0-9_]*<"#,
   │

